# example-bids-dataset-eegeyenet

./: .gitignore  README.md  pyproject.toml
eegeyenet/: __init__.py
eegeyenet/datasets/: __init__.py  eegeyenet.py  eegeyenet_urls.csv
eegeyenet/datasets/tests/: test_datasets.py
eegeyenet/io/: eegeyenet.py
eegeyenet/io/tests/: test_io.py
scripts/: write_bids_script.py
