
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "example-bids-dataset-eegeyenet"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "edfio>=0.4.5",
    "mne-bids",
    "pandas>=2.2.3",
    "pymatreader>=1.0.0",
]

[tool.setuptools]
packages = ["eegeyenet"]

[tool.uv.sources]
mne-bids = { git = "https://github.com/scott-huberty/mne-bids.git", rev = "eyetrack"}
